# Larynx

./: .env.example  .gitignore  M8_COMPLETION_REPORT.md  Makefile  ORCHESTRATION-M7.md  ORCHESTRATION-M8.md  ORCHESTRATION.md  PRD.md  README.md  REPO_STRUCTURE.md  SOAK_REPORT.md  STAGING_VERIFICATION_REPORT.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  smoke_stt.py  smoke_tts.py  supervisord.conf
apps/playground/: CONVERSATION_DESIGN.md  FULL_SURFACE_REPORT.md  PHASE_3_REPORT.md  USER_TESTING_GUIDE.md  USER_TESTING_READINESS.md  next.config.ts  package-lock.json  package.json
apps/playground-test/: README.md  conversation.html  stt_stream.html  tts_stream.html
apps/playground/deploy/: Caddyfile  README.md
apps/playground/src/app/: globals.css  layout.tsx  page.tsx
apps/playground/src/app/clone/: page.tsx
apps/playground/src/app/conversation/: page.tsx
apps/playground/src/app/design/: page.tsx
apps/playground/src/app/finetune/: page.tsx
apps/playground/src/app/transcribe/: page.tsx
apps/playground/src/app/tts/: page.tsx
apps/playground/src/components/: auth-gate.tsx  brand.tsx  coming-soon.tsx  error-panel.tsx  nav.tsx  page-shell.tsx
apps/playground/src/lib/: api-client.ts  audio-capture.ts  errors.ts  stt-stream.ts  tabs.ts  token.ts  ws-client.ts
apps/playground/src/lib/conversation/: audio-capture.ts  audio-playback.ts
bugs/: 001_concurrent_stt.md  002_full_real_model_suite_gpu_accumulation.md  003_stt_m0_garble.md  004_hotword_test_case_sensitivity.md  005_batch_counter_race.md
config/conversation/: filler_tokens.toml
docker/: funasr_worker.Dockerfile  vad_punc_worker.Dockerfile
docs/: deployment.md  m0_smoke_report.md
logs/: final_gpu.txt  final_versions.txt
scripts/: load_demo_voices.py  measure_cache.py  migrate.sh  seed_stt_fixtures.py  smoke_stt.py  smoke_test.py  soak_test.py  staging_verification.py
scripts/diagnostics/: stt_garble_probe.py
scripts/m0/: README.md  pyproject.toml  smoke_tts.py
scripts/soak_utils/: __init__.py  corpus.txt  metrics.py  report.py  sampling.py
