[project]
name = "larynx"
version = "0.1.0"
description = "Self-hosted voice AI platform (VoxCPM2 + Fun-ASR)"
requires-python = ">=3.11"
dependencies = [
    "larynx-shared",
    "larynx-voxcpm-worker",
    "larynx-gateway",
]

[project.optional-dependencies]
# Installs the nano-vllm-voxcpm runtime (torch + flash-attn + CUDA). Only
# available on the GPU box. Invoke via `uv sync --extra gpu`.
gpu = [
    "nano-vllm-voxcpm==2.0.0",
    # Pinned to match the M0 smoke env (torch 2.9 + flash-attn 2.8.3).
    # torch 2.10+ builds for CUDA 13 are ABI-incompatible with flash-attn
    # wheels from when 2.9/cu128 was stable — see scripts/m0 notes.
    "torch>=2.9,<2.10",
    "flash-attn==2.8.3",
]

[tool.uv.workspace]
# Add new workers here as they're built: M3 -> funasr_worker, vad_punc_worker;
# M7 -> training_worker. The spec says `packages/*` in REPO_STRUCTURE.md; we
# list members explicitly so a just-created directory with no pyproject.toml
# doesn't break `uv sync`.
members = [
    "packages/shared",
    "packages/voxcpm_worker",
    "packages/gateway",
]

[tool.uv.sources]
larynx-shared = { workspace = true }
larynx-gateway = { workspace = true }
larynx-voxcpm-worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "anyio>=4.4",
    # aiosqlite is the async driver used by the test fixture's in-memory DB.
    # Production uses psycopg on Postgres.
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# scripts/m0/ is an archived M0 milestone checkpoint (see scripts/m0/README.md);
# we don't re-format the artifacts that validated the hardware.
extend-exclude = ["scripts/m0"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# B008: FastAPI Depends() in defaults is idiomatic.
# SIM105: try/except/pass is clearer than contextlib.suppress for short paths.
ignore = ["E501", "B008", "SIM105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/gateway/tests", "packages/voxcpm_worker/tests", "packages/shared/tests"]
# Tests that require loading the actual VoxCPM2 model on GPU. Opt-in via
# `RUN_REAL_MODEL=1 uv run pytest -m real_model`. Default `pytest` run
# excludes them so the mock suite stays fast.
markers = [
    "real_model: requires the real VoxCPM2 model on GPU (opt-in via RUN_REAL_MODEL=1)",
]
addopts = "-m 'not real_model'"
