[project]
name = "larynx"
version = "0.1.0"
description = "Self-hosted voice AI platform (VoxCPM2 + Fun-ASR)"
requires-python = ">=3.11"
dependencies = [
    "larynx-shared",
    "larynx-voxcpm-worker",
    "larynx-funasr-worker",
    "larynx-vad-punc-worker",
    "larynx-training-worker",
    "larynx-gateway",
]

[project.optional-dependencies]
# Installs the nano-vllm-voxcpm + Fun-ASR-vllm runtimes (torch + flash-attn
# + vllm + CUDA). Only available on the GPU box. Invoke via
# `uv sync --extra gpu`.
gpu = [
    "nano-vllm-voxcpm==2.0.0",
    # Pinned to match the M0 smoke env (torch 2.9 + flash-attn 2.8.3).
    # torch 2.10+ builds for CUDA 13 are ABI-incompatible with flash-attn
    # wheels from when 2.9/cu128 was stable — see scripts/m0 notes.
    "torch>=2.9,<2.10",
    "torchaudio>=2.9,<2.10",
    # flash-attn MUST come from the Dao-AILab prebuilt wheel, not PyPI
    # sdist. The PyPI release ships source only; building from source on
    # this host picks up the system cu13 nvcc and produces a binary that
    # demands libcudart.so.13 — incompatible with torch 2.9's bundled
    # cu12 runtime. The URL pin below (in [tool.uv.sources]) overrides
    # the PyPI source resolution so the wheel is fetched verbatim.
    "flash-attn==2.8.3",
    "vllm==0.13.0",
    "funasr>=1.3.0",
    "transformers>=4.51.3",
]

[tool.uv.workspace]
# REPO_STRUCTURE.md enumerates packages/* explicitly; the workspace list
# below mirrors that. training_worker joined in M7.
members = [
    "packages/shared",
    "packages/voxcpm_worker",
    "packages/funasr_worker",
    "packages/vad_punc_worker",
    "packages/training_worker",
    "packages/gateway",
]

[tool.uv.sources]
larynx-shared = { workspace = true }
larynx-gateway = { workspace = true }
larynx-voxcpm-worker = { workspace = true }
larynx-funasr-worker = { workspace = true }
larynx-vad-punc-worker = { workspace = true }
larynx-training-worker = { workspace = true }
# Prebuilt flash-attn wheel matching torch 2.9 + cu12 + Python 3.12
# + cxx11 ABI=True. Forces uv to fetch this instead of building the
# PyPI sdist from source (which on a cu13 host links against
# libcudart.so.13 and fails at import time). See the comment in the
# [gpu] extra above for the full story.
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "anyio>=4.4",
    # aiosqlite is the async driver used by the test fixture's in-memory DB.
    # Production uses psycopg on Postgres.
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# scripts/m0/ is an archived M0 milestone checkpoint (see scripts/m0/README.md);
# we don't re-format the artifacts that validated the hardware.
extend-exclude = ["scripts/m0"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# B008: FastAPI Depends() in defaults is idiomatic.
# SIM105: try/except/pass is clearer than contextlib.suppress for short paths.
ignore = ["E501", "B008", "SIM105"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/gateway/tests",
    "packages/voxcpm_worker/tests",
    "packages/funasr_worker/tests",
    "packages/vad_punc_worker/tests",
    "packages/training_worker/tests",
    "packages/shared/tests",
]
# Tests that require loading the actual VoxCPM2 / Fun-ASR models on GPU.
# Opt-in via `RUN_REAL_MODEL=1 uv run pytest -m real_model`. Default
# `pytest` run excludes them so the mock suite stays fast.
#
# ``real_train`` gates the M7 end-to-end LoRA-training test (launches
# the actual upstream training script; takes GPU time). Opt-in via
# ``RUN_REAL_TRAIN=1``. See ORCHESTRATION-M7.md §7.
markers = [
    "real_model: requires the real VoxCPM2 / Fun-ASR model on GPU (opt-in via RUN_REAL_MODEL=1)",
    "real_train: requires a real LoRA training run on GPU (opt-in via RUN_REAL_TRAIN=1)",
]
addopts = "-m 'not real_model and not real_train'"
